Changed the CSS to fix an issue where the user couldn't click on links in the welcome message (add z-index to line div). Changed the script.js file to have the GitHub link open in a new tab.

--- a/coolstyles.css
+++ b/coolstyles.css
@@ -71,6 +71,7 @@ td{
 
 /*TODO - make responsive */
 .line{
+	z-index: -1;
     opacity: .4;
     position: absolute;
     width: 100%;
